# Diplom_Skillbox-search-engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
configs/: configs.json  request.json
examples/resources/: file001.txt  file002.txt  file003.txt
examples/resources/lev1/: file002.txt  file003.txt
examples/resources/lev2/: file001.txt
examples/resources/lev3/: file001.txt
include/search_engine/: ConverterJson.h  InvertedIndex.h  JsonFill.h  SearchServer.h
include/search_engine/utils/: defs.h  errors.h
search_engine/: ConvertedJson.cpp  InvertedIndex.cpp  JsonFill.cpp  SearchServer.cpp  main.cpp
tests/: test_InvertedIndex.cpp  test_SearchServer.cpp
